# extract_vba_source

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pythonapp.yml
extract_vba_source/: extract_vba_source.py
tests/: test_extract_vba_source.py
