[tool.poetry]
name = "extract_vba_source"
version = "0.1.0"
description = ""
authors = ["kkanazaw <new.frontier2006@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
oletools = {git="https://github.com/rootassist/oletools.git",rev="d274574"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
extract_vba_source = "extract_vba_source.extract_vba_source:main"


